[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://scripts/player/base_player.gd" id="1"]
[ext_resource type="Script" path="res://scripts/player/components/movement_component.gd" id="2"]
[ext_resource type="Script" path="res://scripts/player/components/health_component.gd" id="3"]
[ext_resource type="Script" path="res://scripts/player/components/inventory_component.gd" id="4"]
[ext_resource type="Script" path="res://scripts/player/components/input_component.gd" id="5"]
[ext_resource type="Script" path="res://scripts/player/components/ragdoll_component.gd" id="6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(20, 40)

[node name="BasePlayer" type="CharacterBody2D"]
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="PlayerSprite" type="ColorRect" parent="Sprite2D"]
offset_left = -10.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = 20.0
color = Color(0.1, 0.8, 0.1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("2")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3")

[node name="InventoryComponent" type="Node" parent="."]
script = ExtResource("4")

[node name="InputComponent" type="Node" parent="."]
script = ExtResource("5")

[node name="RagdollComponent" type="Node" parent="."]
script = ExtResource("6") 